DMP-3794: Change daily list duplicate check to take into account created_ts also